--- a/app/src/main/res/layout/kurz_item.xml
+++ b/app/src/main/res/layout/kurz_item.xml
@@ -9,27 +9,37 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="8dp"
         android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/kurz_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:contentDescription="@string/currency_icon_desc" />
 
         <TextView
             android:id="@+id/code_box"
+            android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight=".2"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="@{kurz.code}" />
 
         <TextView
             android:id="@+id/value_box"
+            android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight=".3"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="@{kurz.rate}" />
 
         <TextView
             android:id="@+id/date_box"
+            android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight=".4"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="@{kurz.createdTime}" />
     </LinearLayout>
 </layout>
