--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -59,8 +59,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/kurzView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             tools:listitem="@layout/kurz_item" />
+
 
     </LinearLayout>
 </layout>
