--- a/app/src/main/res/layout/kurz_item.xml
+++ b/app/src/main/res/layout/kurz_item.xml
@@ -28,7 +28,7 @@
 
         <TextView
             android:id="@+id/value_box"
-            android:gravity="center"
+            android:gravity="end"
             android:layout_width="0dp"
             android:layout_weight=".3"
             android:layout_height="match_parent"
