--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -62,6 +62,38 @@
             android:layout_height="wrap_content"
             tools:listitem="@layout/kurz_item" />
 
+        <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
+            android:id="@+id/choices_sorting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            app:tbgChildSpacing="auto"
+            android:layout_gravity="center"
+            app:tbgCheckedButton="@+id/choice_sort_latest">
+
+            <com.nex3z.togglebuttongroup.button.LabelToggle
+                android:id="@+id/choice_sort_lowest"
+                android:padding="8dp"
+                android:background="@color/cardview_light_background"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Lowest"/>
+
+            <com.nex3z.togglebuttongroup.button.LabelToggle
+                android:id="@+id/choice_sort_latest"
+                android:padding="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Latest"/>
+
+            <com.nex3z.togglebuttongroup.button.LabelToggle
+                android:id="@+id/choice_sort_highest"
+                android:padding="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Highest"/>
+
+        </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>
 
     </LinearLayout>
 </layout>
