--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -75,11 +75,10 @@
 
             <EditText
                 android:id="@+id/inputConversionValue"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="60dp"
                 android:gravity="center"
                 android:hint="@string/hint_value"
-                android:text="1"
                 android:inputType="numberDecimal"
                 tools:layout_editor_absoluteX="100dp"
                 tools:layout_editor_absoluteY="202dp"
@@ -166,8 +165,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:textSize="30sp"
-                android:gravity="center"
-                android:text="0" />
+                android:gravity="center" />
 
         </LinearLayout>
 
