--- a/app/src/main/res/layout/kurz_item.xml
+++ b/app/src/main/res/layout/kurz_item.xml
@@ -31,7 +31,8 @@
             android:gravity="end"
             android:layout_width="0dp"
             android:layout_weight=".3"
-            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
             android:text="@{kurz.rate}" />
 
         <TextView
