--- a/app/src/main/res/layout/kurz_item.xml
+++ b/app/src/main/res/layout/kurz_item.xml
@@ -5,6 +5,46 @@
             name="kurz"
             type="cz.utb.fai.kurzwatcher.domain.KurzEntryModel" />
     </data>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/kurz_icon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:contentDescription="@string/currency_icon_desc" />
+
+            <TextView
+                android:id="@+id/code_box"
+                android:gravity="end"
+                android:layout_gravity="center"
+                android:layout_width="0dp"
+                android:layout_weight=".2"
+                android:paddingLeft="10dp"
+                android:layout_height="match_parent"
+                android:text="@{kurz.code}" />
+
+
+            <TextView
+                android:id="@+id/date_box"
+                android:gravity="end"
+                android:layout_gravity="center"
+                android:layout_width="0dp"
+                android:layout_weight=".3"
+                android:paddingRight="20dp"
+                android:layout_height="match_parent"
+                android:text="@{kurz.createdTime}" />
+
+
+        </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,35 +52,28 @@
         android:padding="8dp"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/kurz_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:contentDescription="@string/currency_icon_desc" />
-
-        <TextView
-            android:id="@+id/code_box"
-            android:gravity="center"
-            android:layout_width="0dp"
-            android:layout_weight=".2"
-            android:layout_height="match_parent"
-            android:text="@{kurz.code}" />
 
         <TextView
             android:id="@+id/value_box"
             android:gravity="end"
             android:layout_width="0dp"
-            android:layout_weight=".3"
+            android:layout_weight=".4"
             android:layout_gravity="center"
             android:layout_height="wrap_content"
             android:text="@{kurz.rate}" />
 
         <TextView
-            android:id="@+id/date_box"
-            android:gravity="center"
+            android:id="@+id/changedby_box"
+            android:gravity="end"
             android:layout_width="0dp"
-            android:layout_weight=".4"
-            android:layout_height="match_parent"
-            android:text="@{kurz.createdTime}" />
+            android:layout_weight=".5"
+            android:paddingRight="20dp"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:text="@{kurz.changedBy}" />
+
     </LinearLayout>
+
+    </LinearLayout>
+
 </layout>
